@@ -10,6 +10,9 @@ Release date: tba
 Core and Builtins
 -----------------
 
+- Issue #23629: Fix the default __sizeof__ implementation for variable-sized
+  objects.
+
 Library
 -------
 
